# Launcher

./: .gitattributes  .gitignore  Cargo.toml  Cross.toml  README.md  RenegadeX-Launcher.res  compile with cross.bat  compile.bat  create-symlink-for-theme.sh  fix-build-issues.sh  inspector.sh  package-installer.sh  package-windows.sh  resolve-link-issues.sh  run.sh  rx.manifest  windows.rs
.github/: dependabot.yml
.github/workflows/: linux.yml  release-branch.yml  release-minor.yml  rust.yml  test.yml  windows.yml
RenegadeX-folder-permissions/: Cargo.toml  rx.manifest  windows.rs
RenegadeX-folder-permissions/src/: main.rs
backend/: Cargo.toml  build.rs  manifest.rc
backend/src/: as_string.rs  configuration.rs  error-codes.rs  error.rs  handler.rs  main.rs  progress.rs  version_information.rs
backend/src/functions/: mod.rs  progress_callback.rs
dom/: app.js  app.mjs  callback-service.mjs  callback_service.mjs  chat-window-menu.htm  chat.css  chat.js  chat.tis  confirm.js  confirmation-modal.mjs  containers.css  download.htm  elements.css  error.htm  events.js  events.mjs  events.tis  first-startup.htm  fonts.css  footer.js  footer.mjs  frontpage.htm  functional.js  functional.mjs  functional.tis  game-dashboard.js  game-dashboard.mjs  game.htm  general.css  index.htm  input-modal.mjs  instance.htm  ip.htm  irc.css  item.htm  join-ip.htm  launcher-progress-modal.mjs  launcher-update.htm  launcher.tis  load-page.htm  (+42 more)
dom/modals/: failure-modal.mjs  launcher-progress-modal.js  progress-modal.js  success-modal.js
installer/: Cargo.toml
installer/src/: dom.htm  main.rs
src/: chat.rs  configuration.rs  error-codes.rs  error.rs  handler.rs  main.rs  progress.rs  redirect.rs  spawn_wrapper.rs  traits.rs
windows-target/: Cargo.toml  windows.rs
