[package]
name = "RenegadeX-Launcher"
version = "0.9.18"
authors = ["SonnyX"]
edition = "2018"
exclude = ["target-windows/**", "target/**", "dom", "dom/**"]

[dependencies]
hyper = "^0.13.6"
hyper-tls = "^0.4.1"
tokio = { version = "0.2", features = ["full"] }
tokio-tls = "^0.3.1"
native-tls = "^0.2"
tokio-reactor = "^0.1.12"
url = "^2.1.0"
futures = "^0.3.5"
sciter-rs = "^0.5.50"
renegadex_patcher = { git = "https://github.com/SonnyX/RenegadeX-patcher-lib" }
rust-ini = "^0.13.0"
single-instance = "^0.1.1"
socket2 = "^0.3.8"
rand = "^0.7.0"
percent-encoding = "^2.1.0"
unzip = { git = "https://github.com/SonnyX/unzip-rs" }
dirs = "^3.0.0"
tower = "^0.3.1"
runas = { git = "https://github.com/SonnyX/rust-runas" }
sha2 = "^0.8"
hex = "^0.4"
log = "^0.4.11"
flexi_logger = "^0.15.8"