[package]
name = "RenegadeX-Launcher"
version = "1.0.0"
authors = ["SonnyX"]
edition = "2018"
exclude = ["target-windows/**", "target/**", "dom", "dom/**"]

[dependencies]
hyper = "0.13"
hyper-tls = "0.4"
tokio = { version = "0.2", features = ["full"] }
tokio-tls = "0.3"
native-tls = "0.2"
tokio-reactor = "0.1"
url = "2.1"
futures = "0.3"
sciter-rs = "0.5"
renegadex_patcher = { git = "https://github.com/SonnyX/RenegadeX-patcher-lib", rev = "1b82927" }
rust-ini = "0.13"
single-instance = "0.1"
socket2 = "0.3"
rand = "0.8"
percent-encoding = "^2.1"
unzip = { git = "https://github.com/SonnyX/unzip-rs" }
dirs = "3.0"
tower = "0.3"
runas = { git = "https://github.com/SonnyX/rust-runas" }
sha2 = "0.9"
hex = "0.4"
log = "0.4"
flexi_logger = "0.16"
