[package]
name = "RenegadeX-Launcher"
version = "0.9.25"
authors = ["SonnyX"]
edition = "2018"
exclude = ["target-windows/**", "target/**", "dom", "dom/**"]

[dependencies]
tokio = { version = "1.4", features = ["full"] }
url = "2.2"
sciter-rs = "0.5"
renegadex_patcher = { git = "https://github.com/SonnyX/RenegadeX-patcher-lib", rev = "1b82927" }
rust-ini = "0.17"
single-instance = "0.3"
socket2 = "0.3"
rand = "0.8"
percent-encoding = "2.1"
unzip = { git = "https://github.com/SonnyX/unzip-rs" }
dirs = "3.0"
runas = { git = "https://github.com/SonnyX/rust-runas" }
sha2 = "0.9"
hex = "0.4"
log = "0.4"
flexi_logger = "0.17"
download-async = "0.10"
async-trait = "0.1"

[profile.release]
lto = true
panic = "abort"