cargo-features = ["strip"]
[package]
name = "RenegadeX-folder-permissions"
version = "1.0.0"
authors = ["SonnyX <randy@vonderweide.nl>"]
edition = "2018"
build = "windows.rs"

[dependencies]
powershell_script = "0.1.5"

[build-dependencies]
embed-resource = "1.3.0"

[profile.release]
opt-level = 'z'
strip = "symbols"
lto=true