#cargo-features = ["strip"]
[package]
name = "renegadex-folder-permissions"
version = "1.0.0"
authors = ["SonnyX <randy@vonderweide.nl>"]
edition = "2021"
build = "windows.rs"

[dependencies]
powershell_script = "0.2"
clap = { version="3.0", features = ["derive"] }

[build-dependencies]
embed-resource = "1.3"

[profile.release]
opt-level = 'z'
#strip = "symbols"
lto=true