[package]
name = "renegade-x-launcher"
version = "0.9.36"
authors = ["SonnyX"]
edition = "2021"
build = "build.rs"
include = ["src/**/*", "Cargo.toml"]

[dependencies]
tokio = { version = "1.23", features = ["full", "tracing"] }
url = "2.3"
sciter-rs = { git = "https://github.com/SonnyX/rust-sciter" }
renegadex_patcher = { git = "https://github.com/SonnyX/RenegadeX-patcher-lib" }
rust-ini = "0.18"
single-instance = "0.3"
socket2 = { version="0.5", features=["all"]}
rand = "0.8"
percent-encoding = "2.2"
unzip = { git = "https://github.com/SonnyX/unzip-rs" }
dirs = "4.0"
runas = { git = "https://github.com/SonnyX/rust-runas" }
sha2 = "0.10"
hex = "0.4"
log = "0.4"
download-async = "0.10"
async-trait = "0.1"
json = "0.12"
quick-xml = { version="0.27" }
semver = "1.0"
console-subscriber="0.1.8"
tracing-subscriber="0.3"
tracing-appender="0.2"
tracing="0.1"

[build-dependencies]
embed-resource = "1.8"

[profile.release]
opt-level = 'z'
debug = 2
lto = true