[package]
name = "RenegadeX-Launcher"
version = "1.0.0"
authors = ["SonnyX"]
edition = "2018"
build = "windows.rs"
exclude = ["release/**", "i686-pc-windows-gnu/**", "RenX-Launcher.zip", "Renegade X Launcher.exe", "sciter.dll", "SelfUpdateExecutor.exe"]

[[bin]]
name = "RenegadeX-Launcher"
path = "../src/main.rs"

[dependencies]
hyper = "0.13"
hyper-tls = "0.4"
tokio = { version = "0.2", features = ["full"] }
tokio-tls = "0.3"
native-tls = "0.2"
tokio-reactor = "0.1"
url = "2.1"
futures = "0.3"
sciter-rs = "0.5"
renegadex_patcher = { git = "https://github.com/SonnyX/RenegadeX-patcher-lib" }
rust-ini = "0.13"
single-instance = "0.1"
socket2 = "0.3"
rand = "0.7"
percent-encoding = "^2.1"
unzip = { git = "https://github.com/SonnyX/unzip-rs" }
dirs = "3.0"
tower = "0.3"
runas = { git = "https://github.com/SonnyX/rust-runas" }
sha2 = "0.9"
hex = "0.4"
log = "0.4"
flexi_logger = "0.16"

[build-dependencies]
embed-resource = "1.3.0"


[profile.release]
opt-level = 'z'
lto=true
